# sre-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: aws-investigator.md  deploy-correlator.md  incident-scribe.md  k8s-investigator.md  logs-analyst.md  metrics-analyst.md  trace-analyst.md
.claude/hooks/: audit_log.py  block_mutations.py
.claude/skills/deploy-correlation/: SKILL.md
.claude/skills/incident-triage/: SKILL.md
.claude/skills/k8s-diagnostics/: SKILL.md
.claude/skills/log-analysis/: SKILL.md
.claude/skills/metric-correlation/: SKILL.md
.claude/skills/rca-report/: SKILL.md  template.md
.claude/skills/service-runbooks/: SKILL.md  _example-service.md
.claude/skills/trace-analysis/: SKILL.md
deploy/: Dockerfile  iam-permissions-policy.json  iam-role-trust-policy.json  k8s-deployment.yaml
infra/: Dockerfile  architecture.drawio
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/api-gateway/authorizer/: index.py
infra/terraform/modules/ecs/: main.tf  otel-collector-config.yaml  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/langfuse/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/observability/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/queue/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
src/: __init__.py  agent_runner.py  config.py  deduper_dynamo.py  investigation_queue.py  pagerduty.py  prompts.py  secrets_loader.py  sqs_consumer.py  webhook_server.py
tests/: send_sample.py  test_dispatcher.py  test_guardrails.py  test_pagerduty_sig.py  test_webhook.py
tests/fixtures/: pagerduty_incident_v3.json
