[project]
name = "sre-agent"
version = "0.1.0"
description = "Autonomous, PagerDuty-triggered Site Reliability Engineer agent (read-only investigate + recommend)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Bounded ranges for reproducible deploys; pin exact versions via a lockfile/constraints file
    # in CI (e.g. `pip-compile` or `uv lock`).
    "claude-agent-sdk>=0.2.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
# Install in production (Dockerfile uses pip install .[aws]):
aws = [
    "boto3>=1.34.0,<2.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[project.scripts]
sre-agent = "src.webhook_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
