[project]
name = "sre-agent"
version = "0.1.0"
description = "Autonomous, PagerDuty-triggered Site Reliability Engineer agent (read-only investigate + recommend)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.0,<1.0.0",
    "fastapi>=0.138.0,<1.0.0",
    "uvicorn[standard]>=0.49.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
]

[project.optional-dependencies]
# Production: pip install ".[aws,otel]"
aws = [
    "boto3>=1.43.34,<2.0.0",
]
otel = [
    "opentelemetry-sdk>=1.42.1,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1,<2.0.0",
    # Langfuse v4 — OTEL bridge sends traces directly via OTLP/HTTP
    "langfuse>=4.9.1,<5.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "boto3>=1.43.34,<2.0.0",
]

[project.scripts]
sre-agent        = "src.webhook_server:main"
sre-agent-worker = "src.sqs_consumer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
